--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -1,3 +1,24 @@
-# Ignore everything - we're using Nixpacks/Procfile, not Docker
-*
-
+# Ignore unnecessary files for Docker build
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+.pytest_cache/
+.coverage
+htmlcov/
+.env
+.env.local
+*.log
+.git/
+.gitignore
+README.md
+*.md
+tests/
+.vscode/
+.idea/
