--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,8 +15,8 @@ openai==1.30.1
 # Web Framework
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
-pydantic==2.7.1
-pydantic-settings==2.2.1
+pydantic>=2.9.0,<3.0.0
+pydantic-settings>=2.3.0,<3.0.0
 
 # Database
 sqlalchemy==2.0.25
@@ -37,3 +37,6 @@ httpx==0.26.0
 # Testing (optional, for development)
 pytest==7.4.4
 pytest-asyncio==0.23.3
+
+# Jira Integration (for CSV import script)
+jira==3.5.2
