--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@
 # Python 3.11+ required
 
 # Core RAG Framework
+numpy>=1.26.0,<2.0.0  # Explicitly pin numpy to ensure pre-built wheels
 langchain==0.1.20
 langchain-openai==0.1.7
 langchain-community==0.0.38
