--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,7 +29,7 @@ redis==5.0.1
 
 # Document Processing
 python-dotenv==1.0.1
-tiktoken==0.7.0
+tiktoken>=0.8.0,<1.0.0  # Updated version with better wheel support
 pypdf==4.0.1
 
 # Utilities
