--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,7 +2,7 @@
 # Python 3.11+ required
 
 # Core RAG Framework
-numpy>=1.26.0,<2.0.0  # Explicitly pin numpy to ensure pre-built wheels
+numpy>=1.26.4,<2.0.0  # Use latest numpy with Python 3.13 wheels
 langchain==0.1.20
 langchain-openai==0.1.7
 langchain-community==0.0.38
@@ -29,7 +29,7 @@ redis==5.0.1
 
 # Document Processing
 python-dotenv==1.0.1
-tiktoken>=0.8.0,<1.0.0  # Updated version with better wheel support
+tiktoken>=0.9.0,<1.0.0  # Latest version with Python 3.13 wheel support
 pypdf==4.0.1
 
 # Utilities
