--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
 # Vena RAG Bot Production - Dependencies
-# Python 3.11+ required
+# Python 3.13+ (updated for Render compatibility)
 
 # Core RAG Framework
-numpy>=1.26.4,<2.0.0  # Use latest numpy with Python 3.13 wheels
+numpy>=2.0.0  # Python 3.13 compatible with pre-built wheels
 langchain==0.1.20
 langchain-openai==0.1.7
 langchain-community==0.0.38
@@ -11,29 +11,29 @@ langchain-community==0.0.38
 qdrant-client==1.9.0
 
 # OpenAI
-openai==1.30.1
+openai>=1.30.1
 
 # Web Framework
 fastapi==0.111.0
 uvicorn[standard]==0.29.0
-pydantic>=2.9.0,<3.0.0
-pydantic-settings>=2.3.0,<3.0.0
+pydantic>=2.10.0,<3.0.0  # Latest with Python 3.13 support
+pydantic-settings>=2.6.0,<3.0.0  # Latest with Python 3.13 support
 
 # Database
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-alembic==1.13.1
+sqlalchemy>=2.0.25
+psycopg2-binary>=2.9.9
+alembic>=1.13.1
 
 # Caching
-redis==5.0.1
+redis>=5.0.1
 
 # Document Processing
-python-dotenv==1.0.1
-tiktoken>=0.9.0,<1.0.0  # Latest version with Python 3.13 wheel support
-pypdf==4.0.1
+python-dotenv>=1.0.1
+tiktoken>=1.0.0  # Latest version with Python 3.13 wheel support
+pypdf>=4.0.1
 
 # Utilities
-httpx==0.26.0
+httpx>=0.27.0  # Latest with Python 3.13 support
 
 # Testing (optional, for development)
 pytest==7.4.4
