--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,9 +3,9 @@
 
 # Core RAG Framework
 numpy>=2.0.0  # Python 3.13 requires numpy 2.0+
-langchain>=0.1.20  # Allow newer versions for numpy 2.0 compatibility
-langchain-openai>=0.1.7
-langchain-community>=0.0.38
+langchain==0.1.20  # Pin to avoid breaking changes from 1.x
+langchain-openai==0.1.7  # Pin to avoid breaking changes
+langchain-community==0.0.38  # Pin to avoid breaking changes
 
 # Vector Database (Production)
 qdrant-client==1.9.0
@@ -29,7 +29,7 @@ redis>=5.0.1
 
 # Document Processing
 python-dotenv>=1.0.1
-tiktoken>=1.0.0  # Latest version with Python 3.13 wheel support
+tiktoken>=0.12.0  # Latest available version (0.12.0 is max)
 pypdf>=4.0.1
 
 # Utilities
