--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,7 +3,7 @@ builder = "DOCKERFILE"
 dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn src.api.main:app --host 0.0.0.0 --port $PORT --workers 4 --timeout-keep-alive 30"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
