--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: fcs-rag-bot-production
     runtime: python
     buildCommand: pip install --upgrade pip && pip install -r backend/requirements.txt
-    startCommand: cd backend && uvicorn src.api.main:app --host 0.0.0.0 --port $PORT
+    startCommand: cd backend && uvicorn src.api.main:app --host 0.0.0.0 --port $PORT --workers 4 --timeout-keep-alive 30
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.9
