Fix CORS security: Restrict to frontend domain only

--- a/backend/env.template
+++ b/backend/env.template
@@ -45,6 +45,10 @@ DEBUG=false
 # Log level: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
+# Frontend URL for CORS (your frontend domain)
+# Default: https://www.fcs-alex.com
+FRONTEND_URL=https://www.fcs-alex.com
+
 # ============================================
 # Cache Configuration
 # ============================================
