Add textarea support for multi-line input and optional S3 knowledge base hosting

--- a/backend/env.template
+++ b/backend/env.template
@@ -56,6 +56,17 @@ FRONTEND_URL=https://www.fcs-alex.com
 CACHE_TTL=86400
 
 # ============================================
+# AWS S3 Configuration (Optional - for knowledge base hosting)
+# ============================================
+# Set USE_S3=true to load documents from S3 instead of local filesystem
+# USE_S3=false
+# AWS_ACCESS_KEY_ID=your-aws-access-key
+# AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+# AWS_REGION=us-east-1
+# S3_BUCKET_NAME=your-bucket-name
+# S3_PREFIX=knowledge_base/  # Optional: folder path in S3 bucket
+
+# ============================================
 # RAG Configuration (Optional - defaults work)
 # ============================================
 # CHUNK_SIZE=500
