--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -35,6 +35,9 @@ pypdf>=4.0.1
 # Utilities
 httpx>=0.27.0  # Latest with Python 3.13 support
 
+# AWS S3 Support (for knowledge base hosting)
+boto3>=1.34.0
+
 # Testing (optional, for development)
 pytest==7.4.4
 pytest-asyncio==0.23.3
