Add event-based ingestion endpoint and Lambda function for S3 triggers

--- a/backend/env.template
+++ b/backend/env.template
@@ -67,6 +67,12 @@ CACHE_TTL=86400
 # S3_PREFIX=knowledge_base/  # Optional: folder path in S3 bucket
 
 # ============================================
+# Ingestion API Key (Optional - for securing /api/ingest endpoint)
+# ============================================
+# Set this to secure the ingestion endpoint (required if using Lambda triggers)
+# INGESTION_API_KEY=your-secret-api-key-here
+
+# ============================================
 # RAG Configuration (Optional - defaults work)
 # ============================================
 # CHUNK_SIZE=500
