--- a/backend/env.template
+++ b/backend/env.template
@@ -81,3 +81,23 @@ CACHE_TTL=86400
 # MAX_TOKENS=2000
 # TEMPERATURE=0.1
 
+# ============================================
+# Jira Configuration (Optional - for ticket creation)
+# ============================================
+# Get API token from: https://id.atlassian.com/manage-profile/security/api-tokens
+# JIRA_SERVER_URL=https://yourcompany.atlassian.net
+# JIRA_EMAIL=your-email@company.com
+# JIRA_API_TOKEN=your-jira-api-token-here
+# JIRA_PROJECT_KEY=SUPPORT
+# JIRA_ISSUE_TYPE=Task
+# JIRA_LABELS=rag-bot,support
+
+# ============================================
+# Authentication Configuration (Simple Auth - No Database)
+# ============================================
+# JWT secret key for token signing (change in production!)
+JWT_SECRET_KEY=your-secret-key-change-in-production
+# Admin credentials for login
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin
+
