--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -31,6 +31,7 @@ redis>=5.0.1
 python-dotenv>=1.0.1
 tiktoken>=0.12.0  # Latest available version (0.12.0 is max)
 pypdf>=4.0.1
+python-docx>=1.1.0  # For Word document parsing
 
 # Utilities
 httpx>=0.27.0  # Latest with Python 3.13 support
